# project-template-cpp

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  EXAMPLE.md  Makefile  Makefile.common  README.md  conan.py  conanfile.py  conanfile.txt  mkdocs.yml  pyproject.toml
.github/actions/export-cupcake/: action.yml
.github/actions/install-cupcake/: action.yml
.github/actions/install-nix/: action.yml
.github/actions/install-python/: action.yml
.github/actions/install-windows/: action.yml
.github/actions/test-project/: action.yml
.github/workflows/: cache-python  linux.yml  macos.yml  nix-direct.yml  nix-transitive.yml  nix-upstream.yml  nix.yml  windows.yml
00-upstream/: CMakeLists.txt  Makefile  conanfile.py  conanfile.txt
00-upstream/cmake/: FutureInstallDirs.cmake  cupcake.cmake  cupcake_add_dependency.cmake  cupcake_add_executable.cmake  cupcake_add_headers.cmake  cupcake_add_library.cmake  cupcake_add_subproject.cmake  cupcake_add_test_executable.cmake  cupcake_add_tests.cmake  cupcake_conan.cmake  cupcake_find_package.cmake  cupcake_generate_version_header.cmake  cupcake_install_project.cmake  cupcake_project.cmake  cupcake_project_properties.cmake  generate_cpp_info.cmake  package-config.cmake.in  set_subproject_variables.cmake  version.hpp.in
00-upstream/include/: CMakeLists.txt
00-upstream/include/greetings/: greetings.hpp
00-upstream/include/zero/: zero.hpp
00-upstream/src/: CMakeLists.txt  greet.cpp  greetings.cpp  true.cpp  zero.cpp
00-upstream/tests/: CMakeLists.txt  boolean.cpp  greetings.cpp  version.cpp  zero.cpp
01-find-package/: CMakeLists.txt  Makefile  conanfile.txt
01-find-package/include/: CMakeLists.txt
01-find-package/include/one/: one.hpp
01-find-package/src/: CMakeLists.txt  executable.cpp  hello.cpp  one.cpp
01-find-package/tests/: CMakeLists.txt  boolean.cpp  one.cpp  version.cpp
02-add-subdirectory/: .gitignore  CMakeLists.txt  Makefile  conanfile.txt
02-add-subdirectory/include/two/: two.hpp
02-add-subdirectory/src/: CMakeLists.txt  executable.cpp  two.cpp
02-add-subdirectory/tests/: CMakeLists.txt  two.cpp
03-fp-fp/: CMakeLists.txt  Makefile  conanfile.txt
03-fp-fp/include/three/: three.hpp
03-fp-fp/src/: CMakeLists.txt  aloha.cpp  libthree.cpp
03-fp-fp/tests/: CMakeLists.txt  three.cpp
04-as-fp/: CMakeLists.txt  Makefile
04-as-fp/include/four/: four.hpp
04-as-fp/src/: CMakeLists.txt  four.cpp  library.cpp
04-as-fp/tests/: CMakeLists.txt  four.cpp
05-fetch-content/: CMakeLists.txt  Makefile  conanfile.txt
05-fetch-content/include/five/: five.hpp
05-fetch-content/src/: CMakeLists.txt  libfive.cpp  main.cpp
05-fetch-content/tests/: CMakeLists.txt  five.cpp
06-fp-fc/: CMakeLists.txt  Makefile  conanfile.txt
06-fp-fc/include/six/: six.hpp
06-fp-fc/src/: CMakeLists.txt  library.cpp  six.cpp
06-fp-fc/tests/: CMakeLists.txt  six.cpp
07-as-fc/: CMakeLists.txt  Makefile  conanfile.txt
07-as-fc/include/seven/: seven.hpp
07-as-fc/src/: CMakeLists.txt  libseven.cpp  main.cpp
07-as-fc/tests/: CMakeLists.txt  seven.cpp
08-find-module/: CMakeLists.txt  Makefile  conanfile.txt
08-find-module/include/eight/: eight.hpp
08-find-module/src/: CMakeLists.txt  eight.cpp  libeight.cpp
08-find-module/tests/: CMakeLists.txt  eight.cpp
09-external-project/: CMakeLists.txt  Makefile  conanfile.txt
09-external-project/include/nine/: nine.hpp
09-external-project/src/: CMakeLists.txt  library.cpp  nine.cpp
09-external-project/tests/: CMakeLists.txt  nine.cpp
10-conan/: CMakeLists.txt  Makefile  conanfile.txt  cupcake.json
10-conan/include/ten/: ten.hpp
10-conan/tests/: CMakeLists.txt
10-special/: CMakeLists.txt  conanfile.txt  cupcake.json
10-special/examples/: CMakeLists.txt
10-special/examples/diez/: CMakeLists.txt  cupcake.json
10-special/examples/diez/include/diez/: diez.hpp
10-special/examples/diez/src/: diez.cpp  libdiez.cpp
10-special/examples/diez/tests/: CMakeLists.txt  diez.cpp
10-special/src/: libten.cpp  ten.cpp
10-special/tests/: CMakeLists.txt  boolean.cpp  ten.cpp
11-no-cupcake/: CMakeLists.txt  Makefile
11-no-cupcake/include/eleven/: eleven.hpp
11-no-cupcake/src/: eleven.cpp  libeleven.cpp
11-no-cupcake/tests/: CMakeLists.txt  eleven.cpp
cupcake/: CMakeLists.txt  Makefile  README.md  conanfile.py  cupcake-config.cmake.in
cupcake/cmake/: cupcake.cmake  cupcake_add_executable.cmake  cupcake_add_library.cmake  cupcake_add_subproject.cmake  cupcake_add_test_executable.cmake  cupcake_add_tests.cmake  cupcake_conan.cmake  cupcake_find_conan_packages.cmake  cupcake_find_package.cmake  cupcake_generate_version_header.cmake  cupcake_install_cpp_info.cmake  cupcake_install_project.cmake  cupcake_module_dir.cmake  cupcake_project.cmake  cupcake_project_properties.cmake  package-config.cmake.in
cupcake/cmake/data/: install_cpp_info.cmake
cupcake/cmake/data/project_cpp_info/: CMakeLists.txt
docs/: index.md
example/: CMakeLists.txt  conanfile.txt  example.cpp
examples/: CMakeLists.txt
examples/english/: CMakeLists.txt  conanfile.py
examples/english/src/: main.cpp
include/: CMakeLists.txt  project_template.h
include/greetings/: greetings.hpp
src/: CMakeLists.txt  greet.cpp  greetings.cpp  project_template.cpp
test_example/: CMakeLists.txt  Makefile
tests/: CMakeLists.txt  README.md  conftest.py  greeting.cpp  greetings.cpp  helpers.py  test_add_subdirectory.py  test_fetch_content.py  test_pcf.py  test_requires_nothing.py  test_requires_zero.py
