[tool.poetry]
name = "project-template-cpp"
version = "0.4.1"
description = "Example C++ project structures using CMake and Conan."
authors = ["John Freeman <jfreeman08@gmail.com>"]
license = "ISC"
readme = "README.md"
packages = [{include = "project_template_cpp"}]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
